--- a/localization/fr.json
+++ b/localization/fr.json
@@ -6,6 +6,7 @@
     "delete": "Supprimer la progression",
     "confirmClear": "Êtes-vous sûr de vouloir supprimer votre progression ?",
     "cancel": "Annuler",
-    "ok": "OK"
+    "ok": "OK",
+    "unlock": "Déverrouiller pour {{price}}"
   }
 }
