--- a/localization/de.json
+++ b/localization/de.json
@@ -2,10 +2,14 @@
   "titleScreen": {
     "mainTitle": "Die Geschichten von Covarnius",
     "start": "Neues Abenteuer starten",
-    "continue": "Fortsetzen",
+    "continue": "Weiter",
     "delete": "Fortschritt löschen",
     "confirmClear": "Bist du sicher, dass du deinen Fortschritt löschen möchtest?",
     "cancel": "Abbrechen",
-    "ok": "OK"
+    "ok": "OK",
+    "unlockPrice": "Freischalten für {{price}}€",
+    "unlock": "✅ Freischalten",
+    "sampleLimit": "🔓 Nur Vorschau ({{count}} Auswahlmöglichkeiten)",
+    "back": "⬅️ Zurück"
   }
 }
