--- a/localization/es.json
+++ b/localization/es.json
@@ -7,6 +7,10 @@
     "confirmClear": "¿Estás seguro de que deseas eliminar tu progreso?",
     "cancel": "Cancelar",
     "ok": "Aceptar",
-    "unlock": "Desbloquear por {{price}}"
+    "unlockPrice": "Desbloquear por {{price}}",
+    "unlock": "✅ Desbloquear",
+    "sampleLimit": "🔓 Solo muestra ({{count}} opciones)",
+        "back": "⬅️ Volver"
+
   }
 }
