--- a/localization/de.json
+++ b/localization/de.json
@@ -3,7 +3,7 @@
     "mainTitle": "Die Geschichten von Covarnius",
     "start": "Neues Abenteuer starten",
     "continue": "Weiter",
-    "delete": "Fortschritt löschen",
+    "delete": "Fortschritt Löschen",
     "confirmClear": "Bist du sicher, dass du deinen Fortschritt löschen möchtest?",
     "cancel": "Abbrechen",
     "ok": "OK",
@@ -13,57 +13,72 @@
     "back": "⬅️ Zurück",
     "selectStory": "Wähle eine Geschichte",
     "chapters": [
-      [
-        { "title": "Zeit für ein Abenteuer!", "order": 2, "id": "intro" },
-        { "title": "Weggabelung", "order": 3, "id": "Part_1_Fork_In_The_Road" },
-        {
-          "title": "Die Cowboys von Katonia 🤠",
-          "order": 4,
-          "id": "Part_1_Cowboys_Of_Katonia"
-        },
-        {
-          "title": "Zufall à la Hapal",
-          "order": 5,
-          "id": "Part_1_Hapalstance"
-        },
-        { "title": "Rettet Hapal", "order": 6, "id": "Part_1_Save_The_Hapal" },
-        {
-          "title": "Hapal enttäuscht 😢",
-          "order": 6,
-          "id": "Part_1_Hapal_Down"
-        },
-        {
-          "title": "Der König 👑",
-          "order": 7,
-          "id": "Part_1_Greatest_Scientist"
-        },
-        {
-          "title": "Hochstapler am Werk",
-          "order": 8,
-          "id": "Part_1_Fake_Til_You_Make"
-        },
-        {
-          "title": "Zeit zu helfen! 🕒",
-          "order": 9,
-          "id": "Part_1_Not_Scientist"
-        },
-        {
-          "title": "Diplomatische Immunität",
-          "order": 10,
-          "id": "Part_1_Diplomatic_Immunity"
-        },
-        {
-          "title": "Wo ist dein Boardingpass?",
-          "order": 11,
-          "id": "Part_1_Boarding_Ticket"
-        },
-        {
-          "title": "Aufwachen, ihr Schlafmützen! ☀️",
-          "order": 12,
-          "id": "Part_2_Hypersleep"
-        },
-        { "title": "Überfall auf Covarnius", "order": 12, "id": "Part_1_Sneak" }
-      ]
+      { "title": "Zeit für ein Abenteuer!", "order": 2, "id": "intro" },
+      { "title": "Weggabelung", "order": 3, "id": "Part_1_Fork_In_The_Road" },
+      {
+        "title": "Die Cowboys von Katonia 🤠",
+        "order": 4,
+        "id": "Part_1_Cowboys_Of_Katonia"
+      },
+      {
+        "title": "Zufall à la Hapal",
+        "order": 5,
+        "id": "Part_1_Hapalstance"
+      },
+      { "title": "Rettet Hapal", "order": 6, "id": "Part_1_Save_The_Hapal" },
+      {
+        "title": "Hapal enttäuscht 😢",
+        "order": 6,
+        "id": "Part_1_Hapal_Down"
+      },
+      {
+        "title": "Der König 👑",
+        "order": 7,
+        "id": "Part_1_Greatest_Scientist"
+      },
+      {
+        "title": "Hochstapler am Werk",
+        "order": 8,
+        "id": "Part_1_Fake_Til_You_Make"
+      },
+      {
+        "title": "Zeit zu helfen! 🕒",
+        "order": 9,
+        "id": "Part_1_Not_Scientist"
+      },
+      {
+        "title": "Diplomatische Immunität",
+        "order": 10,
+        "id": "Part_1_Diplomatic_Immunity"
+      },
+      {
+        "title": "Wo ist dein Boardingpass?",
+        "order": 11,
+        "id": "Part_1_Boarding_Ticket"
+      },
+      {
+        "title": "Aufwachen, ihr Schlafmützen! ☀️",
+        "order": 12,
+        "id": "Part_2_Hypersleep"
+      },
+      { "title": "Überfall auf Covarnius", "order": 12, "id": "Part_1_Sneak" },
+      {
+        "title": "🏠 Startseite",
+        "order": 999,
+        "id": "home"
+      }
     ]
-  }
+  },
+  "home": "🏠 Startseite",
+  "languageChoice": "Wähle deine Sprache",
+  "selectChapter": "📖 Kapitel Auswählen",
+  "settings": {
+    "title": "Einstellungen",
+    "language": "Spracheinstellungen",
+    "support": "Support",
+    "terms": "Nutzungsbedingungen",
+    "privacy": "Datenschutzrichtlinie",
+    "close": "Schließen"
+  },
+  "subtitle": "Eine Reise beginnt mit einem Fremden aus den Sternen"
 }
