still working on light/dark mode. Updated READme for ToS and privacy policy.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2,7 +2,7 @@
   "titleScreen": {
     "mainTitle": "Tales of Covarnius",
     "start": "Start New Adventure",
-    "continue": "Continue",
+    "continue": "🕹️ Continue",
     "delete": "Clear Progress",
     "confirmClear": "Are you sure you want to delete your progress?",
     "cancel": "Cancel",
