--- a/localization/is.json
+++ b/localization/is.json
@@ -2,7 +2,7 @@
   "titleScreen": {
     "mainTitle": "Sögur af Kóvarníus",
     "start": "Byrja nýja ævintýrið",
-    "continue": "Haltu áfram",
+    "continue": "🕹️ Haltu áfram",
     "delete": "Hreinsa Framvindu",
     "confirmClear": "Ertu viss um að þú viljir eyða framvindunni þinni?",
     "cancel": "Hætta við",
