--- a/localization/de.json
+++ b/localization/de.json
@@ -2,7 +2,7 @@
   "titleScreen": {
     "mainTitle": "Die Geschichten von Covarnius",
     "start": "Neues Abenteuer starten",
-    "continue": "Weiter",
+    "continue": "🕹️ Weiter",
     "delete": "Fortschritt Löschen",
     "confirmClear": "Bist du sicher, dass du deinen Fortschritt löschen möchtest?",
     "cancel": "Abbrechen",
