--- a/localization/jp.json
+++ b/localization/jp.json
@@ -2,7 +2,7 @@
   "titleScreen": {
     "mainTitle": "コヴァーニアスの物語",
     "start": "新しい冒険を始める",
-    "continue": "次へ",
+    "continue": "🕹️ 次へ",
     "delete": "進行状況を削除",
     "confirmClear": "進行状況を削除してもよろしいですか？",
     "cancel": "キャンセル",
