--- a/localization/es.json
+++ b/localization/es.json
@@ -3,7 +3,7 @@
     "mainTitle": "Cuentos de Covarnius",
     "start": "Comenzar nueva aventura",
     "continue": "🕹️ Continuar",
-    "delete": "Eliminar Progreso",
+    "delete": "❌ Eliminar Progreso",
     "confirmClear": "¿Estás seguro de que deseas eliminar tu progreso?",
     "cancel": "Cancelar",
     "ok": "Aceptar",
@@ -78,7 +78,7 @@
     "support": "Soporte",
     "terms": "Términos de uso",
     "privacy": "Política de privacidad",
-    "close": "Cerrar"
+    "close": "❌ Cerrar"
   },
   "subtitle": "Un viaje comienza con un extraño de las estrellas"
 }
