--- a/localization/jp.json
+++ b/localization/jp.json
@@ -3,7 +3,7 @@
     "mainTitle": "コヴァーニアスの物語",
     "start": "新しい冒険を始める",
     "continue": "🕹️ 次へ",
-    "delete": "進行状況を削除",
+    "delete": "❌ 進行状況を削除",
     "confirmClear": "進行状況を削除してもよろしいですか？",
     "cancel": "キャンセル",
     "ok": "OK",
@@ -74,7 +74,7 @@
     "support": "サポート",
     "terms": "利用規約",
     "privacy": "プライバシーポリシー",
-    "close": "閉じる"
+    "close": "❌ 閉じる"
   },
   "subtitle": "旅は星から来た見知らぬ者と共に始まる"
 }
