--- a/localization/de.json
+++ b/localization/de.json
@@ -3,9 +3,9 @@
     "mainTitle": "Die Geschichten von Covarnius",
     "start": "Neues Abenteuer starten",
     "continue": "🕹️ Weiter",
-    "delete": "Fortschritt Löschen",
+    "delete": "❌ Fortschritt Löschen",
     "confirmClear": "Bist du sicher, dass du deinen Fortschritt löschen möchtest?",
-    "cancel": "Abbrechen",
+    "cancel": "❌ Abbrechen",
     "ok": "OK",
     "unlockPrice": "Freischalten für {{price}}€",
     "unlock": "✅ Freischalten",
@@ -78,7 +78,7 @@
     "support": "Support",
     "terms": "Nutzungsbedingungen",
     "privacy": "Datenschutzrichtlinie",
-    "close": "Schließen"
+    "close": "❌ Schließen"
   },
   "subtitle": "Eine Reise beginnt mit einem Fremden aus den Sternen"
 }
