--- a/localization/jp.json
+++ b/localization/jp.json
@@ -76,5 +76,9 @@
     "privacy": "プライバシーポリシー",
     "close": "❌ 閉じる"
   },
-  "subtitle": "旅は星から来た見知らぬ者と共に始まる"
+  "subtitle": "旅は星から来た見知らぬ者と共に始まる",
+  "payWall": {
+    "returnToTitle": "ストーリー一覧に戻る",
+    "pitch": "{{title}}を購入して続きを読む！"
+  }
 }
