Front and back swipe is now working

--- a/localization/de.json
+++ b/localization/de.json
@@ -71,7 +71,7 @@
   },
   "home": "🏠 Startseite",
   "languageChoice": "Wähle deine Sprache",
-  "selectChapter": "📖 Kapitel Auswählen",
+  "selectChapter": "Kapitel Auswählen",
   "settings": {
     "title": "Einstellungen",
     "language": "Spracheinstellungen",
