--- a/localization/en.json
+++ b/localization/en.json
@@ -79,7 +79,7 @@
   },
   "home": "🏠 Home",
   "languageChoice": "Choose Your Language",
-  "selectChapter": "📖 Chapter Select",
+  "selectChapter": "Chapter Select",
   "settings": {
     "title": "Settings",
     "language": "Language Settings",
