--- a/localization/es.json
+++ b/localization/es.json
@@ -71,7 +71,7 @@
   },
   "home": "🏠 Inicio",
   "languageChoice": "Elige tu idioma",
-  "selectChapter": "📖 Selección de capítulo",
+  "selectChapter": "Selección de capítulo",
   "settings": {
     "title": "Configuración",
     "language": "Configuración de idioma",
