--- a/localization/fr.json
+++ b/localization/fr.json
@@ -67,7 +67,7 @@
   },
   "home": "🏠 Accueil",
   "languageChoice": "Choisissez votre langue",
-  "selectChapter": "📖 Sélection de chapitre",
+  "selectChapter": "Sélection de chapitre",
   "settings": {
     "title": "Paramètres",
     "language": "Paramètres de langue",
