--- a/localization/is.json
+++ b/localization/is.json
@@ -67,7 +67,7 @@
   },
   "home": "🏠 Heim",
   "languageChoice": "Veldu tungumál þitt",
-  "selectChapter": "📖 Kaflaval",
+  "selectChapter": "Kaflaval",
   "settings": {
     "title": "Stillingar",
     "language": "Tungumálastillingar",
