--- a/localization/jp.json
+++ b/localization/jp.json
@@ -67,7 +67,7 @@
   },
   "home": "🏠 ホーム",
   "languageChoice": "言語を選択してください",
-  "selectChapter": "📖 チャプター選択",
+  "selectChapter": "チャプター選択",
   "settings": {
     "title": "設定",
     "language": "言語設定",
