--- a/localization/is.json
+++ b/localization/is.json
@@ -11,59 +11,7 @@
     "unlock": "✅ Opna",
     "sampleLimit": "🔓 Aðeins sýnishorn ({{count}} valmöguleikar)",
     "back": "⬅️ Til baka",
-    "selectStory": "Veldu sögu",
-    "chapters": [
-      { "title": "Tími til ævintýra!", "order": 2, "id": "intro" },
-      { "title": "Á vegamótum", "order": 3, "id": "Part_1_Fork_In_The_Road" },
-      {
-        "title": "Kúrekarnir frá Katonia 🤠",
-        "order": 4,
-        "id": "Part_1_Cowboys_Of_Katonia"
-      },
-      {
-        "title": "Tilviljun Hapal-stílsins",
-        "order": 5,
-        "id": "Part_1_Hapalstance"
-      },
-      { "title": "Bjargið Hapal", "order": 6, "id": "Part_1_Save_The_Hapal" },
-      {
-        "title": "Við svikuðum Hapal 😢",
-        "order": 6,
-        "id": "Part_1_Hapal_Down"
-      },
-      {
-        "title": "Kóngurinn 👑",
-        "order": 7,
-        "id": "Part_1_Greatest_Scientist"
-      },
-      { "title": "Að þykjast", "order": 8, "id": "Part_1_Fake_Til_You_Make" },
-      {
-        "title": "Tími til að hjálpa! 🕒",
-        "order": 9,
-        "id": "Part_1_Not_Scientist"
-      },
-      {
-        "title": "Friðhelgi diplómata",
-        "order": 10,
-        "id": "Part_1_Diplomatic_Immunity"
-      },
-      {
-        "title": "Brottfararmiðinn þinn?",
-        "order": 11,
-        "id": "Part_1_Boarding_Ticket"
-      },
-      { "title": "Árás á Covarnius", "order": 12, "id": "Part_1_Sneak" },
-      {
-        "title": "Rífið ykkur á fætur! ☀️",
-        "order": 12,
-        "id": "Part_2_Hypersleep"
-      },
-      {
-        "title": "🏠 Heim",
-        "order": 999,
-        "id": "home"
-      }
-    ]
+    "selectStory": "Veldu sögu"
   },
   "home": "🏠 Heim",
   "languageChoice": "Veldu tungumál þitt",
@@ -80,5 +28,7 @@
   "payWall": {
     "returnToTitle": "Til baka á sögulista",
     "pitch": "Kauptu {{title}} til að halda áfram að lesa!"
-  }
+  },
+    "gameOver": "Leik Lokið",
+    "languageChangeWarning": "Ef þú breytir tungumáli verður þér vísað aftur á upphafsskjáinn. Ertu viss?"
 }
