--- a/localization/is.json
+++ b/localization/is.json
@@ -1,7 +1,7 @@
 {
   "titleScreen": {
     "mainTitle": "Sögur af Kóvarníus",
-    "start": "Byrja nýja ævintýrið",
+    "start": "Byrja ferðalagið",
     "continue": "🕹️ Haltu áfram",
     "delete": "❌ Hreinsa Framvindu",
     "confirmClear": "Ertu viss um að þú viljir eyða framvindunni þinni?",
