--- a/localization/es.json
+++ b/localization/es.json
@@ -9,13 +9,13 @@
     "ok": "Aceptar",
     "unlockPrice": "Desbloquear por {{price}}",
     "unlock": "✅ Desbloquear",
-    "sampleLimit": "🔓 Solo muestra ({{count}} opciones)",
+
     "back": "⬅️ Volver",
     "selectStory": "Selecciona una historia"
   },
   "home": "🏠 Inicio",
   "languageChoice": "Elige tu idioma",
-  "selectChapter": "Selección de Capítulo",
+
   "settings": {
     "title": "Configuración",
     "language": "Configuración de Idioma",
@@ -30,6 +30,16 @@
     "pitch": "¡Compra {{title}} para seguir leyendo!"
   },
   "gameOver": "Fin del juego",
-   "languageChangeWarning": "Si cambias el idioma, volverás a la pantalla de inicio. ¿Estás seguro?"
-
+  "languageChangeWarning": "Si cambias el idioma, volverás a la pantalla de inicio. ¿Estás seguro?",
+  "storyList": {
+    "continueChapter": "Reanudar la aventura",
+    "sampleLimit": "🔓 Solo muestra ({{count}} opciones)"
+  },
+  "chapterMenu": {
+    "selectChapter": "Selección de Capítulo",
+    "chaptersUnlocked": "Capítulos desbloqueados"
+  },
+  "unlockPopup": {
+    "unlocked": "¡Capítulo desbloqueado!"
+  }
 }
