--- a/localization/jp.json
+++ b/localization/jp.json
@@ -3,7 +3,7 @@
     "mainTitle": "コヴァーニアスの物語",
     "start": "新しい冒険を始める",
     "continue": "🕹️ 次へ",
-    "delete": "❌ 進行状況を削除",
+    "delete": "削除",
     "confirmClear": "進行状況を削除してもよろしいですか？",
     "cancel": "キャンセル",
     "ok": "OK",
@@ -33,7 +33,11 @@
   "languageChangeWarning": "言語を変更すると、タイトル画面に戻ります。よろしいですか？",
   "storyList": {
     "continueChapter": "冒険の続きを始める",
-    "sampleLimit": "🔓 お試し版（{{count}}つの選択肢）"
+    "sampleLimit": "🔓 お試し版（{{count}}つの選択肢",
+    "deleteProgressTitle": "進行状況を削除しますか？",
+    "deleteProgressBody": "「{{title}}」の進行状況を削除します。よろしいですか？",
+    "deleted": "削除しました",
+    "deletedMessage": "進行状況を正常に削除しました。"
   },
   "chapterMenu": {
     "selectChapter": "チャプター選択",
